// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChatApplication /> allows to enable chat widget and selects the first chat by default 1`] = `
<div>
  <section
    class="leftColumn"
  >
    <div
      class="toggle"
    >
      <label
        aria-checked="false"
        class="label label"
        for="toggle-button-1"
        role="switch"
      >
        <input
          class="input"
          disabled=""
          id="toggle-button-1"
          name="toggle-button-1"
          type="checkbox"
        />
        <div
          class="slider"
        />
        Enable chat widget
      </label>
    </div>
    <p>
      This makes a chat widget visible for all help center pages.
    </p>
  </section>
</div>
`;

exports[`<ChatApplication /> is disabled if there are no chat integrations 1`] = `
<div>
  <section
    class="leftColumn"
  >
    <div
      class="toggle"
    >
      <label
        aria-checked="false"
        class="label isDisabled label disabledLabel"
        for="toggle-button-2"
        role="switch"
      >
        <input
          class="input"
          disabled=""
          id="toggle-button-2"
          name="toggle-button-2"
          type="checkbox"
        />
        <div
          class="slider"
        />
        Enable chat widget
      </label>
    </div>
    <p>
      This makes a chat widget visible for all help center pages.
    </p>
    <div
      class="warning-no-chat"
    >
      <span
        class="float-right"
      >
        <a
          to="/app/settings/integrations/gorgias_chat"
        >
          Create Chat
        </a>
      </span>
      <span
        class="warning-icon mr-2"
      >
        <i
          class="material-icons"
        >
          report_problem
        </i>
      </span>
      You don't have any existing chat integration. Please create one to enable.
    </div>
  </section>
</div>
`;
